Fixing alignment of input box and icon
Took out display styling on search label, fixed alignment issue. Increased the font size of search icon for better visability.

--- a/css/styles.css
+++ b/css/styles.css
@@ -94,10 +94,6 @@
   .search-box {
     font-size: var(--size-20);
   }
-  label {
-    display: flex;
-    flex-direction: row;
-  }
 
   input {
     width: 100vh;
